# fireflow

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
src/firecrest_wflow/: __init__.py  __main__.py  _object_store.py  _orm.py  _test.py  api_types.py  cli.py  data.py  patches.py  process.py  storage.py
src/fireflow/: __main__.py  _object_store.py  _remote_path.py  _sql_parse.py  cli.py  object_store.py  orm.py  patches.py  process.py  storage.py
